20231113 * Add LlmModel添加部分字段， 增加version管理逻辑（未结束）

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ obj/
 /src/Extensions/Senparc.Xncf.PromptRange.Tests/Domain/PromptPlugins/XncfBuilderPlugin/
 /src/Extensions/Senparc.Xncf.XncfBuilder/Senparc.Xncf.XncfBuilder.Tests/Domain/PromptPlugins/XncfBuilderPlugin
 /src/Extensions/Senparc.Xncf.PromptRange/objForNcf
+/src/DevelopmentTools/Senparc.Web.DatabasePlant/App_Data/Database/SenparcConfig.config
