--- a/src/DevelopmentTools/Senparc.Web.DatabasePlant/Senparc.Web.DatabasePlant.csproj
+++ b/src/DevelopmentTools/Senparc.Web.DatabasePlant/Senparc.Web.DatabasePlant.csproj
@@ -14,8 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Extensions\Senparc.Xncf.DatabaseToolkit\Senparc.Xncf.DatabaseToolkit\Senparc.Xncf.DatabaseToolkit.csproj" />
-	  <ProjectReference Include="..\..\Extensions\Senparc.Xncf.XncfBuilder\Senparc.Xncf.XncfBuilder\Senparc.Xncf.XncfBuilder.csproj" />
+		<ProjectReference Include="..\..\Extensions\Senparc.Xncf.PromptRange\Senparc.Xncf.PromptRange.csproj" />
 	</ItemGroup>
 
 </Project>
